# wb_price_bot

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
bot/: bot.py  middleware.py
bot/data/: database.py  wildberries.db
bot/data/models/: allowed_users.py  product.py  user.py
bot/data/services/: allowed_users_service.py  product_service.py  user_service.py
bot/handlers/: __init__.py  admin.py  background.py  commands.py  common.py  products.py
parser/: wildberries.py
