[tool.poetry]
name = "wb-price-bot"
version = "0.1.0"
description = ""
authors = ["AurunChill <aurunchill@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.18.0"
sqlalchemy = "^2.0.38"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
apscheduler = "^3.11.0"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
